@@ -7,8 +7,7 @@ import org.example.flowershop.dto.CartDto;
 import org.example.flowershop.dto.SaveCartItemRequest;
 import org.example.flowershop.mapper.CartItemMapper;
 import org.example.flowershop.model.entity.User;
-import org.example.flowershop.service.impl.CartItemServiceImpl;
-import org.springframework.http.HttpStatus;
+import org.example.flowershop.service.CartItemService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -19,19 +18,17 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.server.ResponseStatusException;
 import org.springframework.web.util.UriComponentsBuilder;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
-@RequestMapping("/cartItem")
+@RequestMapping("/cart-items")
 @Slf4j
 public class CartItemEndpoint {
 
-    private final CartItemServiceImpl cartItemServiceImpl;
+    private final CartItemService cartItemService;
     private final CartItemMapper cartItemMapper;
 
     @GetMapping
@@ -39,26 +36,14 @@ public class CartItemEndpoint {
             @RequestParam(defaultValue = "productName") String sortBy,
             @AuthenticationPrincipal(expression = "user") User currentUser) {
 
-        if (currentUser == null) {
-            log.warn("User is unauthorized");
-            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "User is not authenticated");
-        }
+        log.info("Fetching cart items for userId: {} ", currentUser.getId());
 
-        log.info("Fetching cart items for userId: {} sorted by: {}", currentUser.getId(), sortBy);
-
-        if (!"productName".equals(sortBy)) {
-            log.warn("Invalid sortBy value '{}'. Using default sort by 'productName'.", sortBy);
-            sortBy = "productName";
-        }
-
-        List<CartDto> myCartItems = cartItemServiceImpl.getCartByUser(currentUser.getId(), sortBy)
+        List<CartDto> cartItems = cartItemService
+                .getCartByUser(currentUser.getId(), sortBy)
                 .stream()
                 .map(cartItemMapper::toDto)
-                .collect(Collectors.toList());
-
-        log.info("Returning {} cart items for userId: {}", myCartItems.size(), currentUser.getId());
-
-        return ResponseEntity.ok(myCartItems);
+                .toList();
+        return ResponseEntity.ok(cartItems);
     }
 
     @PostMapping
@@ -67,14 +52,10 @@ public class CartItemEndpoint {
             @AuthenticationPrincipal(expression = "user") User currentUser,
             UriComponentsBuilder uriBuilder
     ) {
-        if (currentUser == null) {
-            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "User is not authenticated");
-        }
-
-        CartDto cartDto = cartItemServiceImpl.addToCart(currentUser.getId(), request);
+        CartDto cartDto = cartItemService.addToCart(currentUser.getId(), request);
 
         var uri = uriBuilder
-                .path("/cartItem/{id}")
+                .path("/cart-items/{id}")
                 .buildAndExpand(cartDto.getId())
                 .toUri();
 
@@ -86,17 +67,11 @@ public class CartItemEndpoint {
             @PathVariable Long id,
             @AuthenticationPrincipal(expression = "user") User currentUser) {
 
-        if (currentUser == null) {
+        log.info("User {} deleting cart-item {}", currentUser.getId(), id);
 
-            log.warn("User is unauthorized", id);
+        cartItemService.remove(currentUser.getId(), id);
 
-            throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "User is not authenticated");
-        }
-
-        log.info("User {} deleting cartItem {}", id, currentUser.getId());
-
-        cartItemServiceImpl.remove(currentUser.getId(), id);
-        log.info("CartItem {} deleted for user={}", id, currentUser.getId());
+        log.info("cart item {} deleted for user={}", id, currentUser.getId());
         return ResponseEntity.noContent().build();
     }
 }
